--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>  
+<!DOCTYPE html>  
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,6 @@
 
 <body>
 <h1>This is a JavaScript Review!</h1>
-
-
-
 
 <script src="./script.js"></script>
 </body>
